--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
               <div class="col-3 p-4 border bg-light">
 
                 <div class="card  text-center" style="width: 15rem;">
-                  <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                  <img class="card-img-top" src="/image/<%= jobindex.image %>" alt="Card image cap">
                   <div class="card-body">
                     
                     <p class="card-text"><%= jobindex.name_company %></p>   
@@ -74,7 +74,7 @@
                   <div class="col-3 p-4 border bg-light">
     
                     <div class="card  text-center" style="width: 15rem;">
-                      <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                      <img class="card-img-top" src="/image/<%= jobindex.image %>" alt="Card image cap">
                       <div class="card-body">
                         <p class="card-text"><%= jobindex.name_company %></p>  
                       </div>
@@ -115,7 +115,7 @@
                     <div class="col-3 p-4 border bg-light">
       
                       <div class="card  text-center" style="width: 15rem;">
-                        <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                        <img class="card-img-top" src="/image/<%= jobindex.image %>" alt="Card image cap">
                         <div class="card-body">
                           <p class="card-text"><%= jobindex.name_company %></p>   
                         </div>
@@ -157,7 +157,7 @@
             <div class="col-3 p-4 border bg-light">
 
               <div class="card  text-center" style="width: 15rem;">
-                <img class="card-img-top" src="./image/AIS.png" alt="Card image cap">
+                <img class="card-img-top" src="/image/<%= jobindex.image %>" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text"><%= jobindex.name_company %></p>
  
